dynamodel_tests/tests/ui/fails/enum_tuple.stderr
error: Unsupported shape `unnamed fields`. Expected named fields.
 --> tests/ui/fails/enum_tuple.rs:3:10
  |
3 | #[derive(Dynamodel)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Dynamodel` (in Nightly builds, run with -Z macro-backtrace for more info)
